--- a/apps/p2EpyhyOPCwmkGKBuKhB/base.css
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/base.css
@@ -24,7 +24,8 @@ footer {
 	position: fixed;
 	bottom: 0;
 	z-index:999;
-    height: 173px;
+    height: 180px;
+    background-color: rgb(255, 255, 255);
 }
 
 .footer_box {
@@ -62,4 +63,9 @@ footer {
 .top-banner li img {
 	max-width:100px; /*画像のはみだしを防ぐ*/
 	height: auto; /*画像の縦横比を維持 */
+}
+
+.Important_Notice_support {
+    height: 2%;
+    background-color: #ffabab;
 }
