--- a/apps/p2EpyhyOPCwmkGKBuKhB/base.css
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/base.css
@@ -69,3 +69,53 @@ footer {
     height: 2%;
     background-color: #ffabab;
 }
+
+.listtitel {
+	padding-left: 20px;
+}
+
+.Llist a {
+  text-decoration:none;
+  color: rgb(0, 0, 0);
+}
+
+.Rlist a {
+  text-decoration:none;
+  color: rgb(0, 0, 0);
+}
+
+.listblock {
+  width        : 100%;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 8px gray;
+  }
+
+.listblock_last {
+  width: 100%;
+  height       : 20px;
+  background-color: rgb(255, 255, 255);
+}
+
+.listtext {
+  margin : 0px 10px;
+}
+
+.list-container {
+  display: flex;
+  justify-content: space-between; /* アイテム間のスペースを均等に配置 */
+  align-items: flex-start; /* 要素を上部に揃える */
+}
+
+.Llist, .Rlist {
+  flex: 1; /* 各リストの幅を均等に設定 */
+  margin: 10px; /* 両側に少しの余白を追加 */
+  box-sizing: border-box; /* パディングやボーダーを含めて幅を計算 */
+}
+
+.listblock img {
+  width: 100%;
+}
+
+.menu_box1 a, .menu_box2 a {
+  text-decoration:none;  
+}
